packages/coast_audio_miniaudio/mabridge/prebuilt/apple/mabridge.xcframework/ios-arm64/mabridge.framework/Headers/mab_audio_converter.h

typedef struct {
  struct {
    mab_format format;
    int sampleRate;
    int channels;
  } input;
  struct {
    mab_format format;
    int sampleRate;
    int channels;
  } output;
  mab_dither_mode ditherMode;
  mab_channel_mix_mode channelMixMode;
} mab_audio_converter_config;
mab_audio_converter_config mab_audio_converter_config_init(mab_format formatIn, mab_format formatOut, int sampleRateIn, int sampleRateOut, int channelsIn, int channelsOut);
typedef struct {
  mab_audio_converter_config config;
  void* pData;
} mab_audio_converter;
mab_result mab_audio_converter_init(mab_audio_converter* pConverter, mab_audio_converter_config config);
mab_result mab_audio_converter_process_pcm_frames(mab_audio_converter* pConverter, const void* pFramesIn, uint64* pFrameCountIn, void* pFramesOut, uint64* pFrameCountOut);