packages/coast_audio_miniaudio/lib/generated/ma_bridge_bindings.dart


  late final _STRDUPPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Int)>>('STRDUP');
  late final _STRDUP = _STRDUPPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  void mab_device_info_init(
    ffi.Pointer<mab_device_info> pInfo,
    mab_device_id id,
    ffi.Pointer<ffi.Char> name,
    int isDefault,
  ) {
    return _mab_device_info_init(
      pInfo,
      id,
      name,
      isDefault,
    );
  }

  late final _mab_device_info_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<mab_device_info>, mab_device_id,
              ffi.Pointer<ffi.Char>, mab_bool)>>('mab_device_info_init');
  late final _mab_device_info_init = _mab_device_info_initPtr.asFunction<
      void Function(ffi.Pointer<mab_device_info>, mab_device_id,
          ffi.Pointer<ffi.Char>, int)>();

  int mab_device_context_init(
    ffi.Pointer<mab_device_context> pContext,
    ffi.Pointer<ffi.Int32> pBackends,
    int backendCount,
  ) {
    return _mab_device_context_init(
      pContext,
      pBackends,
      backendCount,
    );
  }

  late final _mab_device_context_initPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_device_context>,
              ffi.Pointer<ffi.Int32>, ffi.Int)>>('mab_device_context_init');
  late final _mab_device_context_init = _mab_device_context_initPtr.asFunction<
      int Function(
          ffi.Pointer<mab_device_context>, ffi.Pointer<ffi.Int32>, int)>();

  int mab_device_context_get_device_count(
    ffi.Pointer<mab_device_context> pContext,
    int type,
    ffi.Pointer<ffi.Int> pCount,
  ) {
    return _mab_device_context_get_device_count(
      pContext,
      type,
      pCount,
    );
  }

  late final _mab_device_context_get_device_countPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_device_context>, ffi.Int32,
              ffi.Pointer<ffi.Int>)>>('mab_device_context_get_device_count');
  late final _mab_device_context_get_device_count =
      _mab_device_context_get_device_countPtr.asFunction<
          int Function(
              ffi.Pointer<mab_device_context>, int, ffi.Pointer<ffi.Int>)>();

  int mab_device_context_get_device_info(
    ffi.Pointer<mab_device_context> pContext,
    int type,
    int index,
    ffi.Pointer<mab_device_info> pInfo,
  ) {
    return _mab_device_context_get_device_info(
      pContext,
      type,
      index,
      pInfo,
    );
  }

  late final _mab_device_context_get_device_infoPtr = _lookup<
          ffi.NativeFunction<
              mab_result Function(ffi.Pointer<mab_device_context>, ffi.Int32,
                  ffi.Int, ffi.Pointer<mab_device_info>)>>(
      'mab_device_context_get_device_info');
  late final _mab_device_context_get_device_info =
      _mab_device_context_get_device_infoPtr.asFunction<
          int Function(ffi.Pointer<mab_device_context>, int, int,
              ffi.Pointer<mab_device_info>)>();

  int mab_device_context_uninit(
    ffi.Pointer<mab_device_context> pContext,
  ) {
    return _mab_device_context_uninit(
      pContext,
    );
  }

  late final _mab_device_context_uninitPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(
              ffi.Pointer<mab_device_context>)>>('mab_device_context_uninit');
  late final _mab_device_context_uninit = _mab_device_context_uninitPtr
      .asFunction<int Function(ffi.Pointer<mab_device_context>)>();

  mab_device_config mab_device_config_init(
    int type,
    int format,
    int sampleRate,
    int channels,
    int bufferFrameSize,
    int notificationPortId,
  ) {
    return _mab_device_config_init(
      type,
      format,
      sampleRate,
      channels,
      bufferFrameSize,
      notificationPortId,
    );
  }

  late final _mab_device_config_initPtr = _lookup<
      ffi.NativeFunction<
          mab_device_config Function(ffi.Int32, ffi.Int32, ffi.Int, ffi.Int,
              ffi.Int, ffi.Int64)>>('mab_device_config_init');
  late final _mab_device_config_init = _mab_device_config_initPtr
      .asFunction<mab_device_config Function(int, int, int, int, int, int)>();

  int mab_device_init(
    ffi.Pointer<mab_device> pDevice,
    mab_device_config config,
    ffi.Pointer<mab_device_context> pContext,
    ffi.Pointer<mab_device_id> pDeviceId,
  ) {
    return _mab_device_init(
      pDevice,
      config,
      pContext,
      pDeviceId,
    );
  }

  late final _mab_device_initPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(
              ffi.Pointer<mab_device>,
              mab_device_config,
              ffi.Pointer<mab_device_context>,
              ffi.Pointer<mab_device_id>)>>('mab_device_init');
  late final _mab_device_init = _mab_device_initPtr.asFunction<
      int Function(ffi.Pointer<mab_device>, mab_device_config,
          ffi.Pointer<mab_device_context>, ffi.Pointer<mab_device_id>)>();

  int mab_device_capture_read(
    ffi.Pointer<mab_device> pDevice,
    ffi.Pointer<ffi.Float> pBuffer,
    int frameCount,
    ffi.Pointer<ffi.Int> pFramesRead,
  ) {
    return _mab_device_capture_read(
      pDevice,
      pBuffer,
      frameCount,
      pFramesRead,
    );
  }

  late final _mab_device_capture_readPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_device>, ffi.Pointer<ffi.Float>,
              ffi.Int, ffi.Pointer<ffi.Int>)>>('mab_device_capture_read');
  late final _mab_device_capture_read = _mab_device_capture_readPtr.asFunction<
      int Function(ffi.Pointer<mab_device>, ffi.Pointer<ffi.Float>, int,
          ffi.Pointer<ffi.Int>)>();

  int mab_device_playback_write(
    ffi.Pointer<mab_device> pDevice,
    ffi.Pointer<ffi.Float> pBuffer,
    int frameCount,
    ffi.Pointer<ffi.Int> pFramesWrite,
  ) {
    return _mab_device_playback_write(
      pDevice,
      pBuffer,
      frameCount,
      pFramesWrite,
    );
  }

  late final _mab_device_playback_writePtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_device>, ffi.Pointer<ffi.Float>,
              ffi.Int, ffi.Pointer<ffi.Int>)>>('mab_device_playback_write');
  late final _mab_device_playback_write =
      _mab_device_playback_writePtr.asFunction<
          int Function(ffi.Pointer<mab_device>, ffi.Pointer<ffi.Float>, int,
              ffi.Pointer<ffi.Int>)>();

  int mab_device_get_device_info(
    ffi.Pointer<mab_device> pDevice,
    ffi.Pointer<mab_device_info> pDeviceInfo,
  ) {
    return _mab_device_get_device_info(
      pDevice,
      pDeviceInfo,
    );
  }

  late final _mab_device_get_device_infoPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_device>,
              ffi.Pointer<mab_device_info>)>>('mab_device_get_device_info');
  late final _mab_device_get_device_info =
      _mab_device_get_device_infoPtr.asFunction<
          int Function(
              ffi.Pointer<mab_device>, ffi.Pointer<mab_device_info>)>();

  int mab_device_start(
    ffi.Pointer<mab_device> pDevice,
  ) {
    return _mab_device_start(
      pDevice,
    );
  }

  late final _mab_device_startPtr =
      _lookup<ffi.NativeFunction<mab_result Function(ffi.Pointer<mab_device>)>>(
          'mab_device_start');
  late final _mab_device_start =
      _mab_device_startPtr.asFunction<int Function(ffi.Pointer<mab_device>)>();

  int mab_device_stop(
    ffi.Pointer<mab_device> pDevice,
  ) {
    return _mab_device_stop(
      pDevice,
    );
  }

  late final _mab_device_stopPtr =
      _lookup<ffi.NativeFunction<mab_result Function(ffi.Pointer<mab_device>)>>(
          'mab_device_stop');
  late final _mab_device_stop =
      _mab_device_stopPtr.asFunction<int Function(ffi.Pointer<mab_device>)>();

  int mab_device_get_state(
    ffi.Pointer<mab_device> pDevice,
  ) {
    return _mab_device_get_state(
      pDevice,
    );
  }

  late final _mab_device_get_statePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<mab_device>)>>(
          'mab_device_get_state');
  late final _mab_device_get_state = _mab_device_get_statePtr
      .asFunction<int Function(ffi.Pointer<mab_device>)>();

  void mab_device_clear_buffer(
    ffi.Pointer<mab_device> pDevice,
  ) {
    return _mab_device_clear_buffer(
      pDevice,
    );
  }

  late final _mab_device_clear_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mab_device>)>>(
          'mab_device_clear_buffer');
  late final _mab_device_clear_buffer = _mab_device_clear_bufferPtr
      .asFunction<void Function(ffi.Pointer<mab_device>)>();

  int mab_device_available_read(
    ffi.Pointer<mab_device> pDevice,
  ) {
    return _mab_device_available_read(
      pDevice,
    );
  }

  late final _mab_device_available_readPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<mab_device>)>>(
          'mab_device_available_read');
  late final _mab_device_available_read = _mab_device_available_readPtr
      .asFunction<int Function(ffi.Pointer<mab_device>)>();

  int mab_device_available_write(
    ffi.Pointer<mab_device> pDevice,
  ) {
    return _mab_device_available_write(
      pDevice,
    );
  }

  late final _mab_device_available_writePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<mab_device>)>>(
          'mab_device_available_write');
  late final _mab_device_available_write = _mab_device_available_writePtr
      .asFunction<int Function(ffi.Pointer<mab_device>)>();

  void mab_device_uninit(
    ffi.Pointer<mab_device> pDevice,
  ) {
    return _mab_device_uninit(
      pDevice,
    );
  }

  late final _mab_device_uninitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mab_device>)>>(
          'mab_device_uninit');
  late final _mab_device_uninit = _mab_device_uninitPtr
      .asFunction<void Function(ffi.Pointer<mab_device>)>();

  mab_audio_converter_config mab_audio_converter_config_init(
    int formatIn,
    int formatOut,
    int sampleRateIn,
    int sampleRateOut,
    int channelsIn,
    int channelsOut,
  ) {
    return _mab_audio_converter_config_init(
      formatIn,
      formatOut,
      sampleRateIn,
      sampleRateOut,
      channelsIn,
      channelsOut,
    );
  }

  late final _mab_audio_converter_config_initPtr = _lookup<
      ffi.NativeFunction<
          mab_audio_converter_config Function(ffi.Int32, ffi.Int32, ffi.Int,
              ffi.Int, ffi.Int, ffi.Int)>>('mab_audio_converter_config_init');
  late final _mab_audio_converter_config_init =
      _mab_audio_converter_config_initPtr.asFunction<
          mab_audio_converter_config Function(int, int, int, int, int, int)>();

  int mab_audio_converter_init(
    ffi.Pointer<mab_audio_converter> pConverter,
    mab_audio_converter_config config,
  ) {
    return _mab_audio_converter_init(
      pConverter,
      config,
    );
  }

  late final _mab_audio_converter_initPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_audio_converter>,
              mab_audio_converter_config)>>('mab_audio_converter_init');
  late final _mab_audio_converter_init =
      _mab_audio_converter_initPtr.asFunction<
          int Function(
              ffi.Pointer<mab_audio_converter>, mab_audio_converter_config)>();

  int mab_audio_converter_process_pcm_frames(
    ffi.Pointer<mab_audio_converter> pConverter,
    ffi.Pointer<ffi.Void> pFramesIn,
    ffi.Pointer<uint64> pFrameCountIn,
    ffi.Pointer<ffi.Void> pFramesOut,
    ffi.Pointer<uint64> pFrameCountOut,
  ) {
    return _mab_audio_converter_process_pcm_frames(
      pConverter,
      pFramesIn,
      pFrameCountIn,
      pFramesOut,
      pFrameCountOut,
    );
  }
